resultserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resultserver
spec:
  selector:
    matchLabels:
      app: resultserver
  template:
    metadata:
      labels:
        app: resultserver
    spec:
      containers:
      - name: resultserver
        image: alnagi/resultserver
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
