svc-result.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: resultserver
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30002
  type: NodePort
