svc-webserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
    protocol: TCP
  type: NodePort
